@@ -1,17 +1,17 @@
-import java.util.Arrays;
+import java.util.*;
+import java.util.stream.*;
+import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.params.provider.*;
+import org.junit.jupiter.params.*;
+import org.junit.jupiter.api.*;
 import java.util.List;
-
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.MethodSource;
-import org.junit.jupiter.params.provider.Arguments;
-
+import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class HumanEval_0 {
 
     // Source Code
-    static class SourceCode {
+    static class HumanEval_0_Source {
         public static boolean hasCloseElements(List<Double> numbers, double threshold) {
             for (int idx = 0; idx < numbers.size(); idx++) {
                 for (int idx2 = 0; idx2 < numbers.size(); idx2++) {
@@ -28,7 +28,7 @@ public class HumanEval_0 {
     }
 
     // Transformed Code
-    static class TransformedCode {
+    static class HumanEval_0_Transformed {
         public boolean containsNearbyElements(List<Double> values, double limit) {
             int index = 0;
             while (index < values.size()) {
@@ -50,29 +50,89 @@ public class HumanEval_0 {
     }
 
     // Test Cases
-    private static final List<Arguments> testCases = Arrays.asList(
-        Arguments.of(Arrays.asList(1.0, 2.0, 3.0), 0.5),
-        Arguments.of(Arrays.asList(1.0, 2.0, 3.0), 1.5),
-        Arguments.of(Arrays.asList(1.1, 2.2, 3.3), 0.1),
-        Arguments.of(Arrays.asList(1.1, 2.2, 3.3), 1.2),
-        Arguments.of(Arrays.asList(0.0, 0.0, 0.0), 0.0),
-        Arguments.of(Arrays.asList(0.0, 0.1, 0.2), 0.05),
-        Arguments.of(Arrays.asList(5.0, 4.9, 4.8), 0.2),
-        Arguments.of(Arrays.asList(10.0, 20.0, 30.0), 5.0),
-        Arguments.of(Arrays.asList(1.0, 1.0, 1.0, 1.0), 0.1),
-        Arguments.of(Arrays.asList(1.0, 2.0, 3.0, 4.0, 5.0), 1.1)
-    );
+    private static final Object[][] testCases = {
+        {List.of(1.0, 2.0, 3.0), 0.5},
+        {List.of(1.0, 2.0, 3.0), 1.5},
+        {List.of(1.1, 2.2, 3.3), 0.1},
+        {List.of(1.1, 2.2, 3.3), 1.2},
+        {List.of(0.0, 0.0, 0.0), 0.0},
+        {List.of(0.0, 0.1, 0.2), 0.05},
+        {List.of(5.0, 4.9, 4.8), 0.2},
+        {List.of(10.0, 20.0, 30.0), 5.0},
+        {List.of(1.0, 1.0, 1.0, 1.0), 0.1},
+        {List.of(1.0, 2.0, 3.0, 4.0, 5.0), 1.1}
+    };
 
-    private static Stream<Arguments> provideTestCases() {
-        return testCases.stream();
+    private static final boolean[] expectedResults = {
+        false,
+        true,
+        false,
+        true,
+        true,
+        false,
+        true,
+        false,
+        true,
+        true
+    };
+
+    @Test
+    public void test_0() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[0][0], (double) testCases[0][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[0][0], (double) testCases[0][1]));
     }
 
-    @ParameterizedTest
-    @MethodSource("provideTestCases")
-    void hasCloseElements_vs_containsNearbyElements(List<Double> inputList, double threshold) {
-        assertEquals(
-            SourceCode.hasCloseElements(inputList, threshold),
-            new TransformedCode().containsNearbyElements(inputList, threshold)
-        );
+    @Test
+    public void test_1() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[1][0], (double) testCases[1][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[1][0], (double) testCases[1][1]));
+    }
+
+    @Test
+    public void test_2() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[2][0], (double) testCases[2][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[2][0], (double) testCases[2][1]));
+    }
+
+    @Test
+    public void test_3() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[3][0], (double) testCases[3][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[3][0], (double) testCases[3][1]));
+    }
+
+    @Test
+    public void test_4() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[4][0], (double) testCases[4][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[4][0], (double) testCases[4][1]));
+    }
+
+    @Test
+    public void test_5() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[5][0], (double) testCases[5][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[5][0], (double) testCases[5][1]));
+    }
+
+    @Test
+    public void test_6() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[6][0], (double) testCases[6][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[6][0], (double) testCases[6][1]));
+    }
+
+    @Test
+    public void test_7() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[7][0], (double) testCases[7][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[7][0], (double) testCases[7][1]));
+    }
+
+    @Test
+    public void test_8() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[8][0], (double) testCases[8][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[8][0], (double) testCases[8][1]));
+    }
+
+    @Test
+    public void test_9() {
+        assertEquals(HumanEval_0_Source.hasCloseElements((List<Double>) testCases[9][0], (double) testCases[9][1]), 
+                     new HumanEval_0_Transformed().containsNearbyElements((List<Double>) testCases[9][0], (double) testCases[9][1]));
     }
 }
